<resources>
    <string name="app_name">t10_a1_Dura_Marcos</string>
    <string name="txtContentDescriptionIvLego">Imagen del Lego</string>
    <string name="txtTvNombreLego">Nombre del Lego</string>
    <string name="txtTvCategoriaLego">Categoria del Lego</string>
    <string name="txtTvIdLego">ID del Lego</string>
    <string name="txtTvPiezasLego">Número de piezas</string>
    <string name="txtTvEuros">€</string>
    <string name="txtBtnGuardarLego">Guardar</string>
    <string name="txtHintBuscarCategoria">Busca una Categoria</string>
    <string name="txtHelperBuscarCategoria">Technic, Speed Champions, Icons, Star Wars..</string>
    <string name="txtBtnBuscarCategoria">Buscar</string>
    <string name="txtNavigationBuscar">Buscar Legos</string>
    <string name="txtNavigationMisLegos">Mis Legos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtTvBuscarPorCategoria">Busca tus Legos por Categoria:</string>
    <string name="txtNavigationPerfil">Perfil</string>
    <string name="txtTvBienvenido">Bienvenid@ a la Lego App</string>
    <string name="txtHintNombre">Nombre</string>
    <string name="txtHintApellidos">Apellidos</string>
    <string name="txtHintEmail">Email</string>
    <string name="txtHintEdad">Edad</string>
    <string name="txtBtnEntrar">Entrar</string>
    <string name="txtBtnSalir">Salir</string>
    <string name="txtContDescrImgCardView">Imagen del Perfil</string>
    <string name="txtTvNombre">Nombre:</string>
    <string name="txtTvInfoNombre">Marcos Durá Blasco</string>
    <string name="txtTvEmail">Email</string>
    <string name="txtTvInfoEmail">marcosnbx@gmail.com</string>
    <string name="txtTvTuColeccion">Tu Colección:</string>
    <string name="txtTvTotalSets">Número total de sets:</string>
    <string name="txtTvTotalSetsInfo">xx</string>
    <string name="txtTvSets">" sets."</string>
    <string name="txtTvTotalPiezas">Número total de piezas:</string>
    <string name="txtTvTotalPiezasInfo">xxxx</string>
    <string name="txtTvPiezas">" piezas."</string>
    <string name="txtTvSeleccionaCategoria">Selecciona una categoria</string>
    <string name="txtBtnBorrarLego">Borrar</string>
    <string name="txtBtnBorrarTodosLosLegos">Borrar Todos los Legos</string>
    <string name="txtTvBorrarDatos">Borrar Datos</string>
    <string name="txtHintEtBorrarLego">Id del Lego a Borrar</string>
    <string name="txtContentDescriptionPiezaLego">Imagen de Pieza de Lego</string>
    <string name="txtTvNumPiezaLego">Nª de Pieza</string>
    <string name="txtTvPiezasLegoSet">Nº de piezas en set</string>
    <string name="txtTvListadoPiezas">Listado de Piezas</string>
    <string name="txtTvNombreDelLego">Nombre del Lego</string>
    <string name="txtTvAnyoSalida">"Año de salida: "</string>
    <string name="txtTvAnyoSalidaInfo">xxxx</string>
    <string name="txtTvPrecioEstimado">"Precio estimado: "</string>
    <string name="txtTvPrecioEstimadoInfo">xx.xx€</string>
    <string name="txtTvInfoLego">Información del Lego</string>
    <string name="txtBtnVisitarWeb">Visitar Página web</string>
    <string name="txtHintIdLego">Introduce un ID</string>
    <string name="txtBtnBuscarLegoId">buscar</string>
</resources>