<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/ivLego"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightIvLego"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@color/cardview_light_background"
            android:contentDescription="@string/txtContentDescriptionIvLego"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/tvIdLego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLego"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/txtTvIdLego"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvNombreLego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvIdLego"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/txtTvNombreLego"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvCategoriaLego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNombreLego"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txtTvCategoriaLego"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tvPiezasLego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLego"
            app:layout_constraintBottom_toTopOf="@id/btnGuardarLego"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txtTvPiezasLego"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/btnGuardarLego"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heghtBtnComprarLego"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPiezasLego"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txtBtnGuardarLego"
            style="@style/AppButtonStyle"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>