<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BuscarLegosFragment"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvSeleccionaCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/txtTvSeleccionaCategoria"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/ivLego"
        android:layout_width="@dimen/ivLegoMain"
        android:layout_height="@dimen/ivLegoMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSeleccionaCategoria"
        app:layout_constraintEnd_toStartOf="@id/spinnerCategorias"
        android:src="@drawable/ic_lego"
        android:contentDescription="@string/txtContentDescriptionIvLego"
        android:layout_marginTop="10dp"
        />

    <Spinner
        android:id="@+id/spinnerCategorias"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/ivLego"
        app:layout_constraintTop_toBottomOf="@id/tvSeleccionaCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/layoutBuscarLegoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLego"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLayoutIdLego"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/txtHintIdLego"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiIdLego"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnBuscarLego"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:text="@string/txtBtnBuscarLegoId"
            style="@style/AppButtonStyle"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerViewLegos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBuscarLegoId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_lego_buscar"
        android:layout_marginTop="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>